# tantivy-go

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  binding_typedefs.h  bindings.h  config.toml  document.go  example.go  fastfield.go  flake.nix  go.mod  go.sum  index.go  rust-toolchain.toml  schemabuilder.go  searchcontext.go  searchquerybuilder.go  searchresult.go  tantivy.go  tantivy_batch_test.go  tantivy_local.go  tantivy_opstamp_test.go  tantivy_remote.go  tantivy_test.go  tantivycontext.go  typedef_unix32.go  typedef_unix64.go  typedef_win64.go  util.go
.github/workflows/: test.yml
example/: main.go
go/: Makefile  bindings.h  go.mod  go.sum  main.go  main_test.go
go/tantivy/: binding_typedefs.h  bindings.h  document.go  index.go  schemabuilder.go  searchresult.go  tantivy.go  typedef_unix32.go  typedef_unix64.go  typedef_win64.go  util.go
gomobile/: mobile.go
internal/: libinit.go
rust/: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
rust/src/: build.rs  lib.rs
rust/src/c_util/: mod.rs  util.rs
rust/src/config/: config.rs  mod.rs
rust/src/queries/: convert.rs  mod.rs  models.rs  serializers.rs
rust/src/tantivy_util/: document.rs  edge_ngram_tokenizer.rs  fast_field.rs  highlights.rs  mod.rs  models.rs  scheme.rs  scheme_builder.rs  stemmer.rs  tokenizer.rs  util.rs
src/: build.rs  lib.rs
src/c_util/: mod.rs  util.rs
src/clayer/: util.rs
src/tantivy_go/: edge_ngram_tokenizer.rs  mod.rs  tokenizer.rs  util.rs
src/tantivy_util/: document.rs  edge_ngram_tokenizer.rs  highlights.rs  mod.rs  (+4 more)
tantivy/: document.go  index.go  schemabuilder.go  searchresult.go  tantivy.go  tantivy_test.go
test_jsons/: data.json
testquality/: .gitignore  README.md  main.go
(+8 files in other folders)
