[package]
name = "tantivy-go"
version = "0.2.0"
edition = "2021"
build = "src/build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
tantivy = "0.22.0"
cbindgen = "0.27.0"
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
unicode-segmentation = "1.11.0"
logcall = "0.1"
lazy_static = "1.5.0"
tantivy-jieba = "0.11.0"