[package]
name = "tantivy-go"
version = "1.0.0"
edition = "2021"
build = "src/build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.28.0"

[dependencies]
tantivy = { git = "https://github.com/anyproto/tantivy.git", rev = "693274a5d4be6da9d069dff4d540162165a99b0e" }
cbindgen = "0.28.0"
log = "0.4.26"
env_logger = "0.11.6"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
unicode-segmentation = "1.12.0"
logcall = "0.1.11"
lazy_static = "1.5.0"
tantivy-jieba = { git = "https://github.com/anyproto/tantivy-jieba.git", rev = "ca11d3153b8844cbc43cd243667e03f56f6d1e18", optional = true }
phf = { version = "0.11.2", features = ["macros"] }

[features]
default = ["jieba"]
jieba = ["dep:tantivy-jieba"]
